# GCBC

./: .gitignore  CLAUDE.md  README.md  install.ps1  install.sh  plan.md  pyproject.toml
.claude/commands/: bc.md  case.md  close-case.md  debate.md  fact.md  gc.md  interrogate.md  investigate.md  link-case.md  merge-case.md  open-case.md  reopen-case.md  split-case.md  verdict.md
cases/gcbc-promotional-website/: case.md  links.md
src/gcbc/: __init__.py  case.py  cli.py  interactive.py  templates.py
